--- a/Desafios/d012/index.html
+++ b/Desafios/d012/index.html
@@ -14,7 +14,7 @@
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -26,7 +26,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado<br>
@@ -38,7 +38,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa<br>
             É parte de um endereço<br>
@@ -59,7 +59,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartasbr <br>
             Escritas com a própria mãobr <br>
@@ -71,7 +71,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e enviobr <br>
             Chegando na mesma horabr <br>
