--- a/Exercicios/ex024/iframe003.html
+++ b/Exercicios/ex024/iframe003.html
@@ -28,7 +28,9 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore, id dolor corrupti harum laudantium soluta delectus eligendi libero repudiandae adipisci dolores tempora mollitia vitae sunt quisquam esse ea deleniti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea tempora maiores quis hic ullam error voluptas doloremque, laudantium voluptatem eius ad sapiente adipisci rem. Dicta nisi quisquam commodi soluta dignissimos!</p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe src="" id="tela" name="frame" 
+            srcdoc="<h1>Escolha uma das opções acima.<h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque deleniti repellendus aliquam nam officiis sint ullam nihil quos dolor perferendis, dignissimos quidem iste maiores culpa voluptate enim explicabo nobis nemo?</p>">
+
         <p>Infelizmente seu navegador não é compativel com isso.</p>
     </iframe>
     
