--- a/Exercicios/ex026/mq005/index.html
+++ b/Exercicios/ex026/mq005/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=], initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,5 +31,15 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem et fugiat unde iure aliquid? Sit laboriosam rerum optio perspiciatis ea magnam delectus nesciunt obcaecati! Quae ducimus obcaecati voluptate quam aspernatur. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel nostrum nemo, consequatur molestias ratione illum id corporis, veniam quaerat quis est eveniet odit! Facilis quia, veniam a non error quisquam!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = ' block'
+            }
+
+        }
+    </script>
 </body>
 </html>
